@@ -28,6 +28,7 @@
 	  Thanks James Raftery
 	* ED25519 and ED448 support.
 	* ldns-notify: can have IPv6 address as argument.
+	* Fix time sensitive TSIG compare vulnerability.
 
 1.7.0	2016-12-20
 	* Fix lookup of relative names in ldns_resolver_search.
